--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,24 @@ buildscript {
 
 apply plugin: 'android'
 
+repositories {
+    jcenter()
+}
+
+dependencies {
+    androidTestCompile 'com.android.support:support-annotations:22.2.0'
+    androidTestCompile 'com.android.support.test:runner:0.3'
+    androidTestCompile 'com.android.support.test:rules:0.3'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2'
+}
+
 android {
     compileSdkVersion 22
     buildToolsVersion "22.0.1"
+    defaultConfig {
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+    }
+    packagingOptions {
+        exclude 'LICENSE.txt' // fix for plugin's issue 61573
+    }
 }
