--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 	<uses-sdk android:minSdkVersion="22" android:targetSdkVersion="22"/>
 	<application 
 		android:icon="@drawable/ic_launcher"
-		android:label="Hello"
+		android:label="@string/app_label"
 		android:theme="@style/app_theme">
 		<activity android:name=".ui.MainActivity">
 			<intent-filter>
