--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,9 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.littlewhywhat.hello.android" android:versionCode="1" android:versionName="1.0">
-	<uses-sdk android:minSdkVersion="22" android:targetSdkVersion="22"/>
-	<application 
+	<uses-sdk android:minSdkVersion="27" android:targetSdkVersion="28"/>
+	<application
+		android:allowBackup="true"
 		android:icon="@drawable/ic_launcher"
 		android:label="@string/app_label"
-		android:theme="@style/app_theme">
+		android:theme="@style/Theme.AppCompat.Light">
 		<activity android:name=".ui.MainActivity">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
